# mcp-server-guide

./: .coveragerc  .dockerignore  .envrc  .gitignore  .mcp-server-guide.config.json  .mcp-server-guide.current  .mcpguide.config.json  .osvcheck  .pre-commit-config.yaml  API.md  ARCHITECTURE.md  Dockerfile.dev  Dockerfile.prod  INSTALLATION_GUIDE.md  LICENSE.md  README.md  TASK-013-remove-tools-config.md  compose.yaml  docker-entrypoint.sh  mcp_install.py  migrate_to_categories.py  mypy.ini  pyproject.toml  test_client_path_debug.py  test_client_path_fixed.py  test_final_verification.py  test_mcp_integration.py
.adr/: 001-template-engine-selection.md
.github/workflows/: python-mcp-test.yml
aidocs/context/: freeform.md  repostats.md
aidocs/daic/: daic.md
aidocs/guide/: guidelines.md
aidocs/lang/: java.md  kotlin.md  python.md
aidocs/project/: freeform.md
aidocs/scm/: git.md
amazonq/: README.md
amazonq/cli-agents/: consent.json  review.json
amazonq/scripts/: q_AgentSpawn.sh  q_PreToolUse.sh  q_UserPromptSubmit.sh
guide/: guidelines.md
kiro/: README.md
kiro/agents/: consent.json  guide-review.json  guide.json  review.json
src/: kiro_install.py  mcp_install.py  osvcheck.py
src/mcp_server_guide/: __init__.py  agent_detection.py  cli_parser.py  cli_parser_click.py  client_path.py  commands.py  config-schema.json  config.py  config_paths.py  constants.py  context.py  current_project_manager.py  document_cache.py  error_handler.py  exceptions.py  file_cache.py  file_lock.py  file_source.py  guide_integration.py  help_system.py  http_client.py  installation.py  language_detection.py  logging_config.py  main.py  naming.py  path_resolver.py  project_config.py  prompts.py  resource_registry.py  server.py  server_extensions.py  server_factory.py  server_lifecycle.py  session.py  session_manager.py  session_tools.py  tool_decoration.py  tool_registry.py  validation.py
src/mcpguide/: config.py  file_cache.py  file_source.py  http_client.py  logging_config.py  main.py  project_config.py  server.py  session.py  session_tools.py
templates/: README.md
templates/checks/: python.md  testing.md
templates/context/: freeform.md  openspec.md  repostats.md
templates/discuss/: spec.md
templates/guide/: complete.md  guidelines.md  issues.md
templates/lang/: groovy.md  python.md  rust.md  spring.md
templates/prompt/: check.md  discuss.md  implement.md  plan.md  status.md
templates/review/: commit.md  general.md  pr.md  tagged.md
templates/scm/: git.md
test/__docs__/: test.md_.json
tests/: conftest.py  mock_mcp.py  test_agent_detection.py  test_async_http_client.py  test_async_main_conversion.py  test_category_api_modernization.py  test_category_crud_handler.py  test_category_document_discovery.py  test_category_field_preservation.py  test_category_file_extension_fallback.py  test_category_get_content_operation.py  test_category_queue_error_paths.py  test_cli_architecture_restructure.py  test_cli_config_command.py  test_cli_help_generation.py  test_cli_help_restoration.py  test_cli_parser_click.py  test_cli_regression_fix.py  test_cli_subcommand_help.py  test_clone_cli_command.py  test_clone_project.py  test_collection_crud_handler.py  test_collection_document_search.py  test_collection_safe_save_session.py  test_collection_serialization.py  test_collection_tools_comprehensive.py  test_collection_tools_edge_cases.py  test_collection_validation_edge_cases.py  test_collections.py  test_command_handler_error_paths.py  test_commands.py  test_comprehensive_help_system.py  test_concurrent_initialization.py  test_config_document_listing.py  test_config_formatter.py  test_config_isolation.py  test_config_paths.py  test_config_prompt_project_resolution.py  test_config_prompt_validation.py  test_config_schema_validation.py  (+114 more)
tests/mcp_server_guide/: __init__.py  test_absolute_path_resolution.py  test_all_category_resource.py  test_auto_config_persistence.py  test_builtin_category_partial_updates.py  test_category_auto_load_validation.py  test_category_auto_save.py  test_category_auto_save_integration.py  test_category_descriptions.py  test_category_tools.py  test_category_tools_errors.py  test_cli_config_integration.py  test_cli_modes.py  test_client_path.py  test_client_prefix_support.py  test_commands_handler_errors.py  test_commands_init.py  test_config.py  test_config_cleanup.py  test_config_filename_removal.py  test_config_format_updates.py  test_config_isolation.py  test_config_path_defaults.py  test_config_resolution_flow.py  test_config_tools_error_handling.py  test_content_tools.py  test_context.py  test_core_tools.py  test_coverage_boost_2.py  test_coverage_boost_3.py  test_daic_agent_delegation.py  test_daic_command.py  test_docroot_handling.py  test_error_handling.py  test_file_cache.py  test_file_lock.py  test_file_source.py  test_file_source_enum.py  test_file_tools.py  test_get_all_guides_auto_load.py  (+41 more)
tests/mcpguide/: __init__.py  test_auto_config_persistence.py  test_cli_modes.py  test_config.py  test_config_isolation.py  test_content_tools.py  test_core_tools.py  test_file_cache.py  test_file_source.py  test_file_tools.py  test_http_access.py  test_logging.py  test_main.py  test_mcp_startup.py  test_mcp_startup.py.skip  test_project_config.py  test_server.py  test_server_integration.py  test_session.py  test_session_integration.py  test_session_management.py  test_session_tools.py  test_sse_mode.py  test_sse_mode.py.skip  test_tools_structure.py
tests/mpc_server_guide/: test_auto_config_persistence.py  (+29 more)
(+109 files in other folders)
