[project]
name = "mcp-server-guide"
version = "0.9.0"
description = "MCP server for handling guidelines, project rules and controlled development"
readme = "README.md"
license = {file = "LICENSE.md"}
authors = [{name = "David Nugent", email = "davidn@uniquode.io"}]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0",
    "mcp[cli]>=1.16.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.1",
    "urllib3>=2.5.0",
    "starlette>=0.49.1",
    "aioshutil>=1.6",
    "python-magic>=0.4.27",
    "chevron>=0.14.0",
]

[project.scripts]
mcp-server-guide = "mcp_server_guide.main:cli_main"
mcp-server-guide-install = "mcp_install:cli_main"
mcp-server-guide-kiro-install = "kiro_install:main"
# check for vulnerabilities
osvcheck = "osvcheck:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = []

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_guide"]
# Include templates and kiro as package data
include = ["templates/**/*", "kiro/**/*"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "templates"
"kiro" = "kiro"

[tool.hatch.build.targets.sdist]
include = [
    "src/mcp_server_guide",
    "templates",
    "kiro",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/mcp_server_guide",
    "--cov-report=term-missing",
]

[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["I"]  # Enable import sorting

[tool.ruff.lint.isort]
known-first-party = ["mcp_server_guide"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
strict = true
namespace_packages = true

[dependency-groups]
dev = [
    "build>=1.3.0",
    "coverage>=7.10.7",
    "deptry>=0.23.1",
    "hatchling>=1.27.0",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.2",
    "types-aiofiles>=24.1.0.20250822",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]
